# robobo

data/: bridges.csvs
dearet/: Makefile  Snip.txt  notes.js  notes.txt  outcome.scm  outcome.txt  process.js
event/: CMakeLists.txt  main.cpp
event/include/yarp/sig/: IntegralImage.h
event/src/: IntegralImage.cpp  Pattern.cpp  Pattern.h  invert.cpp  main.cpp
icub/kinematics/: BlenderRobot.py  DummyRobot.py  Makefile  empty.blend  kino.py  parse_ale.pl  setup.py  skeleton.ini
icub/pc104/rate/: CMakeLists.txt  main.cpp
linky/: CMakeLists.txt  main.cpp
thrift/: Makefile
thrift/compiler/: CMakeLists.txt  version.h
yarpros/: CMakeLists.txt  transport_test.cpp
yarpros/cross/: command_group.msg  waggler.cpp
yarpros/headers/ros/: Point.h
yarpros/headers/yarp/: Point.h
yarpros/phase3/: CMakeLists.txt
yarpros/tutorials/: AddTwoInts.h  CMakeLists.txt  Point.h  add_two_ints_server.cpp  int_talker.cpp  listener.cpp  mini_talker.cpp  pt_listener.cpp  pt_talker.cpp  talker.cpp
yarpros/tutorials/yarp/: CMakeLists.txt  yarp_pt_listener.cpp  yarp_pt_talker.cpp
